// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly 1`] = `
<div>
  <button
    class="btn btn-primary"
    type="button"
  />
</div>
`;

exports[`Button should render correctly with children 1`] = `
<div>
  <button
    class="btn btn-primary"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button should render correctly with isLoading 1`] = `
<div>
  <button
    class="btn btn-primary"
    disabled=""
    type="button"
  >
    <div>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-spinner fa-spin fa-sm  css-1vbona3"
        data-icon="spinner"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Button should render correctly with variant 1`] = `
<div>
  <button
    class="btn btn-success"
    type="button"
  />
</div>
`;
